[package]
name        = "futurity"
version     = "0.1.0"
description = "FUTURITY – Engineering Financial Futures on Solana"
edition     = "2021"

[lib]
crate-type  = ["cdylib", "lib"]
name        = "futurity"


[features]
no-entrypoint = []
default = []

[profile.release]
overflow-checks = true

[dependencies]
borsh = "0.10"
borsh-derive = "0.10"
thiserror = "1.0"
solana-security-txt = "1.1.1"
solana-program = "2.2.15"
