[package]
name         = "futurity"
version      = "0.1.0"
edition      = "2021"
description  = "FUTURITY – Engineering Financial Futures on Solana"

[lib]
name        = "futurity"
crate-type  = ["cdylib", "lib"]

[features]
no-entrypoint = []
default       = []

[dependencies]
borsh              = "0.10"
borsh-derive       = "0.10"
thiserror          = "1.0"
solana-security-txt = "1.1.1"
solana-program     = "2.1.0"